# nanogame

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  config.ini  level0.txt  level1.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt
cmake/: version.h.in
src/: Config.cpp  Config.hpp  GameScene.cpp  GameScene.hpp  Input.hpp  Level.cpp  Player.cpp  Player.hpp  Render.cpp  Render.hpp  Scene.hpp  Splash.cpp  Splash.hpp  main.cpp
src/core/: GameScene.cpp  GameScene.hpp  IRenderer.hpp  InputState.hpp  Level.hpp  Player.cpp  Player.hpp  Scene.hpp  Splash.cpp  Splash.hpp
src/platform/SDL_uni/: Input.cpp  Input.hpp  PlayerRender.cpp  PlayerRender.hpp  Renderer.cpp  Renderer.hpp  SplashRender.cpp  SplashRender.hpp
